chore: update playbook to match production linting rules

--- a/templates/service_template.service.j2
+++ b/templates/service_template.service.j2
@@ -9,7 +9,7 @@ Restart=always
 ExecStartPre=-/usr/bin/docker kill {{ service_name }}
 ExecStartPre=-/usr/bin/docker rm {{ service_name }}
 ExecStart=/usr/bin/docker run --name {{ service_name }} \
-  {{ docker_run_args }} \
+  {{ run_args }} \
   {{ image }}
 ExecStop=/usr/bin/docker stop {{ service_name }}
 
